# Factorio_automation

./: .gitignore  AGENTS.md  AGENT_HANDOFF.md  BAT_FILES.md  HANDOFF_CURRENT.md  LLM_CONTINUATION.md  OVERNIGHT_HANDOFF.md  README.md  cleanup_and_deploy.ps1  config.example.json  continue_factorio_cli.bat  goal.md  insight.md  note.md  pyproject.toml  requirements.txt  reset_factorio_no_mod_map.bat  reset_serving.ps1  restart_factorio_no_mod_unattended_llm.bat  restart_factorio_no_mod_unattended_llm_full_reset.bat  run_autopilot_direct.ps1  run_code_agent.ps1  run_factorio_gui.bat  run_factorio_no_mod_autopilot.bat  run_factorio_no_mod_codex_wait_layout_loop.bat  run_factorio_no_mod_idle_layout_loop.bat  run_factorio_no_mod_iron_mvp.bat  run_factorio_no_mod_llm_autopilot.bat  run_factorio_no_mod_real_player_llm_autopilot.bat  run_factorio_no_mod_server.bat  run_factorio_no_mod_skill_foundry_loop.bat  run_factorio_no_mod_unattended_fle.bat  run_factorio_no_mod_unattended_llm.bat  run_factorio_no_mod_unattended_llm.ps1  run_factorio_no_mod_watch_gui.bat  run_factorio_non_gui.bat  run_factorio_restore_steam_mods.bat  run_factorio_slurm_llm_27b_gpu3_queue.bat  run_factorio_slurm_llm_4b_attached_benchmark.bat  run_factorio_slurm_llm_4b_worker.bat  (+7 more)
docs/: CLI_HANDOFF.md  TRACE_ARCHIVE.md
md/: AGENTS.md  insight.md  note.md
md_format/: HANDOFF_CURRENT.md  goal.md
reference_blueprints/: README.md  smelting_mining_reference_book.txt
slurm/: run-factorio-ai-worker.sh
tests/: test_block_builders.py  test_blueprints.py  test_capacity_and_library.py  test_cell_apply.py  (+38 more)
(+56 files in other folders)
