[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factorio-ai-autoplayer"
version = "0.1.0"
description = "Layered Factorio AI autoplayer using a local RCON controller and optional Slurm LLM worker."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NEC" }]
dependencies = []

[project.scripts]
factorio-ai = "factorio_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
